SonarQube (Maintainability: Low) "Replace this String concatenation with Text block." [Solved]